# task-manager

./: .env.sample  .gitignore  README.md  pyproject.toml
task_manager/: __init__.py
task_manager/collector/: cpu_stat_collector.py
task_manager/collector/daemon/: signal_publisher.py
task_manager/collector/service/: cpu_metric_collector.py  memory_metric_collector.py  metric_collector.py  signal_subscriber.py
task_manager/collector/utils/: constants.py
task_manager/database/: postgres_connector.py  redis_connector.py
task_manager/models/: commons.py
