[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["pranjal <rktpranjal@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
